riscv-pac/tests/ui/fail_empty_macro.stderr
error: unexpected end of input, expected `unsafe`
 --> tests/ui/fail_empty_macro.rs:1:1
  |
1 | #[riscv_pac::pac_enum]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `riscv_pac::pac_enum` (in Nightly builds, run with -Z macro-backtrace for more info)
